--- a/connectors/jquery/package.json
+++ b/connectors/jquery/package.json
@@ -15,7 +15,7 @@
     "url": "git://github.com/danielgindi/dgtable.js.git"
   },
   "scripts": {
-    "build": "npm run lint && node scripts/build.js",
+    "build": "node scripts/build.js",
     "prepublishOnly": "node -e \"process.env.NODE_ENV != 'production' && process.exit(1)\" || npm run build"
   },
   "bugs": {
@@ -28,7 +28,7 @@
     }
   ],
   "dependencies": {
-    "@danielgindi/dgtable.js": "^2.0.0",
+    "@danielgindi/dgtable.js": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
@@ -39,8 +39,9 @@
     "core-js": "^3.47.0",
     "fs-extra": "^11.3.2",
     "globals": "^15",
-    "husky": "^9.1.7",
-    "pinst": "^3.0.0",
     "rollup": "^4.53.3"
+  },
+  "peerDependencies": {
+    "jquery": "*"
   }
 }
