[chore] started migrating to TypeScript

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "2.0.7",
   "main": "dist/lib.cjs.min.js",
   "module": "dist/lib.es6.min.js",
-  "broswer": "dist/lib.umd.min.js",
+  "browser": "dist/lib.umd.min.js",
+  "types": "dist/index.d.ts",
   "type": "module",
   "author": {
     "name": "Daniel Cohen Gindi",
@@ -16,6 +17,7 @@
   },
   "scripts": {
     "build": "npm run lint && node ./scripts/build.js",
+    "build:types": "tsc --emitDeclarationOnly --declaration --declarationMap --outDir dist",
     "lint": "node -e \"process.env.NODE_ENV != 'production' && process.exit(1)\" || eslint -f codeframe ./",
     "lint-fix": "node -e \"process.env.NODE_ENV != 'production' && process.exit(1)\" || eslint -f codeframe --fix ./",
     "prepare": "node -e \"process.env.NODE_ENV != 'production' && process.exit(1)\" || husky",
@@ -43,6 +45,7 @@
     "@rollup/plugin-commonjs": "^28.0.9",
     "@rollup/plugin-node-resolve": "^15.3.1",
     "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^12.3.0",
     "core-js": "^3.47.0",
     "eslint": "^9.39.1",
     "eslint-formatter-codeframe": "^7.32.2",
@@ -50,6 +53,8 @@
     "globals": "^15",
     "husky": "^9.1.7",
     "pinst": "^3.0.0",
-    "rollup": "^4.53.3"
+    "rollup": "^4.53.3",
+    "tslib": "^2.8.1",
+    "typescript": "^5.9.3"
   }
 }
